2011-12-16  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testBeliefState.cpp: Update testSendingBeliefState.
	* testsuite/BeliefStateServer.h: Likewise
	* testsuite/BeliefStateServer.cpp: Likewise.
	* testsuite/BeliefStateClient.h: Likewise.
	* testsuite/BeliefStateClient.cpp: Likewise.
	* testsuite/Makefile.am: Likewise.

	* src/mcs/NewBeliefState.cpp: New file.

	* src/mcs/Makefile.am (libmcs_a_SOURCES): Add NewBeliefState.cpp

	* inclde/mcs/NewBeliefState: Fix load & save methods.

2011-12-14  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/mcs/NewBeliefState.h: New file.

	* include/mcs/Makefile.am: Add BridgeRule.h and BridgeRuleTable.h

	* testsuite/testTables.cpp: Add testBridgeRuleTable.

	* include/mcs/ID.h: Add methods to create belief literals from
	ID of beliefs.

	* include/mcs/BridgeRule.h: Add struct BridgeRule.

2011-12-12  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testTables.cpp: Finalize testBeliefTable.

	* testsuite/Makefile.am: Add testTables.

	* src/mcs/Makefile.am: Add new cpp files.

	* src/mcs/ID.cpp: Update print() for belief.

	* include/mcs/Makefile.am: Add new header files.

	* include/mcs/ID.h: Add Belief related stuff.

	* include/mcs/Belief.h:	Change to store kind and text.
	* include/mcs/BeliefTable.h: Likewise.

	* include/mcs/Belief.h: New file.

	* include/mcs/BeliefTable.h: Likewise.
	* include/mcs/Table.h: Likewise.
	* include/mcs/Logger.h: Likewise.
	* testsuite/testTables.cpp: Likewise.
	* src/mcs/ID.cpp: Likewise.
	* src/mcs/Logger.cpp: Likewise.
	* src/mcs/Belief.cpp: Likewise.
	* include/mcs/BridgeRule.h: Likewise.

2011-12-07  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/solver/Makefile.am: Remove comments that cause
	compiler errors.

	* include/mcs/Atoms.h: New file.
	* include/mcs/ID.h: Likewise.
	* include/mcs/Printhelpers.h: Likewise.

2011-12-06  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/solver/BaseSolverState.h: New file.
	* include/solver/InputMessage.h: Likewise.