@@ -1,3 +1,8 @@
+2011-12-22  Minh Dao-Tran  <dao@kr.tuwien.ac.at>
+
+	* include/mcs/QueryID.h: New file.
+	* src/mcs/QueryID.cpp: Likewise.
+
 2011-12-16  Minh Dao-Tran  <dao@kr.tuwien.ac.at>
 
 	* testsuite/testBeliefState.cpp: Update testSendingBeliefState.
